# service-technology.org

./: .cproject  AUTHORS  Makefile  Makefile.in  README  THEORY  aclocal.m4  config.status  configure  configure.ac  presentation.odp
BSD/: AUTHORS  BSD_CSD_png.sh  BSD_benchmark.sh  BSD_check.sh  BSD_complete.sh  BSD_create_table.sh  BSD_dotbenchmark.sh  BSD_dots2png.sh  BSD_png.sh  BSD_u_png.sh  ChangeLog  NEWS  README  REQUIREMENTS  THANKS  THEORY  build.xml  configure.ac
BSD/doc/: BSD.json  BSD.texi  ChangeLog.texi  Doxydetails.in  Makefile.am  extra_man  version.texi
BSD/src/: BSD.cc  BSD.conf.in  BSD.h  CSD.h  InnerMarking.cc  InnerMarking.h  Label.cc  Label.h  Makefile.am  Output.cc  Output.h  cmdline.ggo  lexic_graph.cc  main.cc  openNet.cc  openNet.h  parser.h  partnercheck.h  syntax_graph.yy  testunbounded.owfn  testunbounded2.dot  testunbounded2.owfn  testunbounded3.dot  testunbounded3.owfn  types.h  util.h  verbose.h
BSD/tests/: Makefile.am  package.m4.in  testsuite.at  wrap.sh
anastasia/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  REQUIREMENTS  THANKS  THEORY  configure.ac
anastasia/doc/: ChangeLog.texi  Makefile.am  anastasia.json  anastasia.texi
anastasia/examplenets/: data1010.llnet  data1212.llnet  data1515.llnet  phils100.llnet  phils150.llnet  phils20.llnet  phils200.llnet  phils50.llnet
anastasia/man/: Makefile.am
anastasia/src/: Makefile.am  anastasia.conf.in  cmdline.ggo  formula.cc  formula.h  lexic_anastasia.ll  main.cc  syntax_anastasia.yy  tarjan.cc  tarjan.h  witness.cc  witness.h
anastasia/tests/: Makefile.am  cover.sh.in  package.m4.in  testsuite.at  versions.sh  wrap.sh
anica/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  REQUIREMENTS  THANKS  THEORY  configure.ac
anica/doc/: ChangeLog.texi  Makefile.am  anica.json  anica.texi  anica.xml  extra_man
anica/m4/: st_lola.m4
anica/src/: AnicaLib.cc  AnicaLib.h  GUI.cc  GUIsendfile.cc  Makefile.am  Output.cc  Output.h  Reporter.cc  Reporter.h  Results.cc  Results.h  Socket.cc  Socket.h  anica-util.h  anica.conf.in  cmdline.ggo  exceptions.cc  exceptions.h  main.cc  reasoner.cc  verbose.cc  verbose.h
anica/tests/: Makefile.am  package.m4.in  testsuite.at
bom-anon/: AUTHORS  COPYING  ChangeLog  Makefile.am  README  configure.ac
bom-anon/doc/: Makefile.am  bom-anon.texi
bom-anon/src/: Makefile.am  bom-anon.ll
bpel2owfn/: .cvsignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  THANKS  bpel-rewrite.k  configure.ac  ftpcommands  gnupload  tidy.directive
bpel2owfn/doc/: .cvsignore  ChangeLog.texi  Doxyfile.in  Makefile  Makefile.am  bpel2owfn.json  bpel2owfn.texi  fdl.texi  gendocs.sh  gendocs_template  generic.json  install.texi  texinfo.tex  version.texi
bpel2owfn/gui/: BPEL2oWFN.pmproj  BPEL2oWFN.pro  BPEL2oWFN.qrc  Makefile  README  bpel2owfn-gui.cc  dialog.ui  gui_organizer.cc  gui_organizer.h  static_release.sh  static_release.sh.in  translation-de.ts
bpel2owfn/maintainer/: Makefile.am
bpel2owfn/man/: Makefile.am
bpel2owfn/rpm/: Makefile.am  bpel2owfn.spec.in
bpel2owfn/src/: .cvsignore  Console.h  Doxyfile  Doxyfile.in  Makefile  Makefile.am  ast-config.k  ast-details.cc  ast-details.h  ast-grammar.k  ast-postprocess.k  ast-rewrite.k  ast-to-cfg.k  ast-to-petrinet-full1.k  ast-to-petrinet-full2.k  ast-to-petrinet-new1.k  ast-to-petrinet-new2.k  ast-to-petrinet-small.k  ast-to-petrinet.k  ast-to-visualization.k  ast-to-xml.k  ast-tools.cc  ast-tools.h  bpel-attributes.cc  bpel-attributes.h  bpel2owfn.cc  bpel2owfn.h.in  cfg.cc  cfg.h  check-symbols.cc  check-symbols.h  cmdline.ggo  colorconsole.h  debug.cc  debug.h  exception.cc  exception.h  extension-chor.cc  extension-chor.h  extension-data.cc  (+41 more)
bpel2owfn/tests/: Makefile  Makefile.am  error.bpel  loan.bpel  loan2.bpel  package.m4.in  purchase.bpel  shipping.bpel  shipping2.bpel  test-bpel4chor-10instances  test-bpel4chor-1instance  test-choreography-customer1  test-choreography-customer2  test-choreography-customer3  test-cmdline-bug  test-cmdline-detailed-help  test-cmdline-full-help  test-cmdline-help  test-cmdline-version  test-input-file-auction  test-input-file-error  test-input-file-loan  test-input-file-loan11  test-input-file-order  test-input-file-purchase  test-input-file-purchase11  test-input-file-shipping  test-input-file-shipping11  test-input-pipe  test-input-pipe-error  test-output-apnn  test-output-dot  test-output-ina  test-output-lola  test-output-owfn  test-output-pep  test-output-pnml  test-output-spin  test-output-tpn  test-output-xml  (+63 more)
candy/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  REQUIREMENTS  THANKS  THEORY  configure.ac
candy/doc/: ChangeLog.texi  Doxyfile.in  Makefile.am  candy.json  candy.texi  extra_man  version.texi
candy/m4/: st_basic.m4
candy/man/: Makefile.am
candy/src/: Event.h  Formula.cc  Formula.h  Graph.cc  Graph.h  Makefile.am  (+19 more)
chie/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  REQUIREMENTS  THANKS  THEORY  configure.ac
cora/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  REQUIREMENTS  THEORY  configure.ac
cosme/: AUTHORS  Makefile.am  NEWS  README  benchmark-equivalence-cosme.sh  benchmark-matching-cosme.sh  benchmark-simulation-cosme.sh  configure.ac
diane/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  REQUIREMENTS  THEORY  configure.ac
domino/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  REQUIREMENTS  THANKS  THEORY  configure.ac
evans/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  configure.ac
fiona/: .cproject  .cvsignore  .project  AUTHORS  ChangeLog  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.covcommon  Makefile.in  NEWS  README  THANKS  config.status  configure  configure.ac
fiona-gui/: ChangeLog  Makefile.am  NEWS  configure.ac
genet/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  REQUIREMENTS  configure.ac
linda/: ChangeLog  Makefile.am  NEWS  README  THANKS  configure.ac
lisa/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  REQUIREMENTS  THANKS  THEORY  configure.ac
lola/: AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  NEWS  README  configure.ac
(+10598 files in other folders)
